--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   }],
   "license": "MIT",
   "dependencies": {
-    "simplemde": "^1.11.2"
+    "simplemde": "adam-zacharski/simplemde-markdown-editor#5a8890409a9775c7ce0fcec9ecebe285249f3a6f"
   },
   "main": "lib/index.js",
   "devDependencies": {
